--- a/plonetheme/barceloneta/theme/less/event.plone.less
+++ b/plonetheme/barceloneta/theme/less/event.plone.less
@@ -7,8 +7,11 @@
 	background: @plone-body-bg;
 	box-shadow: 0 1px 3px rgba(0,0,0,.17);
 	padding: @plone-padding-base-horizontal @plone-padding-base-horizontal @plone-padding-base-horizontal (@plone-padding-base-horizontal*3);
+	margin-left: 5px;
 
-	strong, li > span {display: block;}
+	strong, li > span {
+		display: block;
+	}
 }
 
 
